--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 <footer id="footer">
     <div class="footer1">
           <div class="songimage">
-            <img src="./Assets/dancing.png">
+            <img src="./Assets/Rectangle 20.svg">
          <div>   <h2>Dreaming On</h2>
             <p>NEFFEX</p></div>
             <img src="./Assets/bx_bxs-heart.svg">
           </div>
           <div class="songimage1">
-            <img src="./Assets/Music Player Options.png">
+            <img src="./Assets/Music Player Options (1).svg">
           </div>
           <div class="songimage2">
             <img src="./Assets/Right options.svg">
