--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
           </div>
     </div>
     <div class="footer2">
-        
+        <div>
+            <img src="./Assets/fluent_speaker-2-24-regular.svg">
+            <p>Listening on ASUS-ROG-G531GT</p>
+        </div>
     </div>
 </footer>
     
